tests/feature_tests/snapshots/e2e__feature_tests__multishell__Fish.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
fnm env | source
fnm install v8.11.3
fnm install v11.9.0
fnm use v8.11.3
fish -c '
fnm env | source
fnm use 11
if test (node -v) '\!'= "v11.9.0"
    echo '\''Expected Node version to be "v11.9.0", Got: '\''(node -v)
    exit 1
end
'
if test (node -v) != "v8.11.3"
    echo 'Expected Node version to be "v8.11.3", Got: '(node -v)
    exit 1
end
